src/regalia/css/style.css
body {
    background-color: white;
    color: black;
}

div {
    overflow: auto;
}

article {
    width: 50%;
}

p {
    font-size: larger;
    border-style: solid;
    border-color: Black;
    border-width: thick;
    width: 50%;
}

#testp {
    font-weight: bold;
    font-size: 2em;
}

#Continue {
    float: right;
    margin-top: 20px;
    margin-right: 4px;
    display: inline-block;
    vertical-align: middle;
    background-color: Gray;
    visibility: hidden;
}

#RoomThumb {
    display: inline-block;
    margin: 3px;
    height: 60px;
    width: 60px;
    border: 1px solid red;
}

#RoomTitle {
    display: inline-block;
    width: 40%;
    text-align: center;
    font-family: sans-serif;
    font-weight: bold;
    font-size: large;
    border: 1px solid green;
    vertical-align: top;
    margin-top: 20px;
    margin-left: 7px;
}

#MainPic {
    position: absolute;
    width: 50%;
    margin: 3px;
    top: 40px;
    left: 300px;
    height: 300px;
}

#MainVid {
    position: absolute;
    width: 50%;
    margin-left: 5px;
    top: 40px;
    left: 300px;
    vertical-align: top;
    visibility: hidden;
}

.MainLayeredImage {
    position: absolute;
    width: 50%;
    margin-left: 5px;
    top: 40px;
    left: 300px;
    vertical-align: top;
}

table {
    width: 100%;
    height: 100%
}

#textbutton {
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#textactionbutton {
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#playernamebutton {
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#playernametext {
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#genderchoiceSelect {
    width: auto;
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#playernametext {
    width: 100%;
}

#savemenu, #loadmenu {
    position: absolute;
    background-color: White;
    visibility: hidden;
    max-height: 300px;
    border: 1px solid grey;
    display: flex;
    flex-direction: column;
}

#savemenu h3, #loadmenu h3 {
    margin: 0 0 4px 0;
}

#savemenu > * {
    flex: 0 0 auto;
}

#savemenu .savegames-table {
    flex: 1 1 auto;
}

.savegames-header {
    padding: 8px;
    flex: 0 0 auto;
}

.btn {
    border: 1px solid grey;
    background: lightgrey;
    cursor: pointer;
    font-size: 16px;
}

.btn:hover {
    background: #aaa;
}

.btn.btn-danger {
    background: #ffb4b4;
}

.btn.btn-danger:hover {
    background: #d47979;
}

.savegames-header button {
    margin-top: 4px;
}

.savegames-table {
    height: auto;
}

.savegames-table.btn {
    height: 100%;
    width: 100%;
}

.savegames-table th, .savegames-table td {
    text-align: left;
}

.savegames-table td {
    vertical-align: middle;
    border: 1px solid grey;
}

.savegames-table .name-column {
    width: 220px;
}

td {
    text-align: center;
}

#inputtable {
    width: 100%;
    height: 100%;
}

#inputchoices {
    width: auto;
    height: 100%;
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#cmdinputtable {
    width: 100%;
    height: 100%;
}

#cmdinputchoices {
    width: auto;
    height: 100%;
    opacity: 0.9;
    filter: alpha(opacity=90);
}

#selectionmenu {
    position: absolute;
    background-color: White;
    min-width: 200px;
    max-width: 300px;
    max-height: 300px;
    overflow: auto;
    top: 50px;
    visibility: hidden;
    filter: alpha(opacity=60);
}

#Actionchoices {
    width: 100%;
    height: 100%;
}

#PlayerPortrait {
    display: none;
    width: 20%;
    margin: 2px;
    border: 4px solid black;
    vertical-align: top;
}

.PortraitLayeredImage {
    position: absolute;
    width: 20%;
    margin: 2px;
    vertical-align: top;
}

#RoomThumbImg {
    position: absolute;
    margin: 2px;
}

#RoomThumbImg:not([src]) {
    display: none;
}

.RoomLayeredImage {
    position: absolute;
    width: 20%;
    margin: 2px;
    vertical-align: top;
}

#RoomObjectsPanel {
    display: inline-block;
    vertical-align: top;
    width: 16%;
    margin: 2px;
}

#RoomObjects {
    width: 97%;
    margin: 2px;
    height: 87%;
}

#VisibleCharactersPanel {
    display: inline-block;
    vertical-align: top;
    width: 15%;
    margin: 2px;
}

#VisibleCharacters {
    width: 97%;
    margin: 2px;
    height: 87%;
}

#InventoryPanel {
    display: inline-block;
    vertical-align: top;
    width: 16%;
    margin: 2px;
}

#Inventory {
    width: 97%;
    margin: 2px;
    height: 87%;
}

#Version {
    float: right;
    display: inline;
    margin-right: 20px;
    position: absolute;
    text-align: center;
    vertical-align: middle;
    margin-left: 20px;
}

#tooltip {
    z-index: 100;
    font-weight: bold;
    position: absolute;
    width: auto;
    height: 25px;
    background-color: white;
    visibility: hidden;
}

